# krobots

./: .gitignore  Cargo.toml  README.md  build.rs  test_connection.py
docs/: .buildinfo  index.html  index.md
examples/python/: README.md
krobots/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  deny.toml  test_conf.yaml
krobots/.cargo/: config.toml
krobots/.github/workflows/: rust.yml
krobots/src/: conf.rs  lib.rs  remote_ch.rs  tank.proto  tests.rs
krobots/src/icons/: bullet_64x64.data  flower_64x64.data  tank_icox16.data  tank_icox32.data
krobots/src/physics/: mod.rs  tank.rs  tank_wasm.rs  ui_interface.rs  util.rs
krobots/src/physics/networking/: mod.rs
krobots/src/ui_bevy/: camera_controller.rs  camera_controller_plugin.rs  gizmos.rs  mod.rs  ui.rs
krobots/test_tanks/: test.toml
krobots/test_tanks/dumb/: Cargo.toml  Makefile.toml
krobots/test_tanks/dumb/src/: lib.rs
krobots/test_tanks/hunter/: Cargo.toml  Makefile.toml
krobots/test_tanks/hunter/src/: lib.rs  util.rs
krobots/test_tanks/simple/: Cargo.toml  Makefile.toml
krobots/test_tanks/simple/src/: lib.rs
krobots/wit/: world.wit
miniquad-0.3.0-alpha.42_patch/: 0.3  Cargo.toml  Cargo.toml.orig
miniquad-0.3.0-alpha.42_patch/src/: lib.rs
miniquad-0.3.0-alpha.42_patch/src/native/linux/: asd
miniquad-0.3.0-alpha.45_patch/src/: lib.rs
python/: .pydevproject  .pylintrc  Pipfile  README.md  create_distribution.py  generate_docs.py  generate_proto_python.bat  multi_launcher.py  pyproject.toml  regression_tests.py  test_tank.py
python/docs/singlehtml/: index.html  objects.inv
python/examples/: circle_robot.py  dumb_robot.py  tower.py
python/ktanks/: __init__.py  tank_pb2.py  tank_pb2.pyi
python/source/: conf.py  index.rst  server_answer.rst  server_answer.txt
simple_tank/: Cargo.toml  README.md
simple_tank/src/: lib.rs
src/: conf.rs  graphics.rs  krobots_main.rs  lib.rs  local_ch.rs  main.rs  networking.rs  physics.rs  remote_ch.rs  tank.proto  ui.rs
src/icons/: smoke_fire_64x64.data  tank_icox64.data
src/physics/: mod.rs  networking.rs  report.rs  tank.rs  ui_interface.rs  util.rs
src/physics/networking/: mod.rs  tcp.rs  udp.rs
src/ui_bevy/: camera_controller_plugin.rs  gizmos.rs  mod.rs  ui.rs
