[package]
name = "ktanks_server"
version = "1.0.2"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ui_client"

[[bin]]
name = "ktanks_server"

[build-dependencies]
prost-build = "0.9"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "0.14.0", features = [ "simd-stable","serde-serialize"] }
macroquad = { version = "0.3.20"}
macroquad-profiler = {version = "*"}
macroquad-particles = {version = "*"}
# Logging  libraries
env_logger = {version = "*"}
log = {version = "*", features = ["max_level_debug"]}
# protobuf library
prost = "0.10.3"
# command line parser
clap = { version = "3.0.10", features = ["derive"] }
csv = "1.1.6"
# To control physics simulation time frame
ticktock = "0.8.0" 
serde = "1.0.135"
message-io = {version = "0.14.5",default-features = false, features = ["tcp", "udp"]} 
bincode = "*"
ctrlc = "3.2.1"
human-panic = "1.0.3"
confy = "0.4.0"

[dependencies.nalgebra]
features =[ "convert-glam014" ,"serde-serialize"]

[dependencies.glam]
version ="0.14.0"

[profile.dev.package.rapier2d]
opt-level = 3

[profile.dev.package.macroquad]
opt-level = 3

[dev-dependencies]
float_eq = "1"

