[package]
name = "ktanks_server"
version = "1.0.2"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ui_client"

[[bin]]
name = "ktanks_server"

[build-dependencies]
prost-build = "0.9"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { git="https://github.com/dimforge/rapier.git",rev ="refs/pull/493/head", features = [ "simd-stable","serde-serialize"] }
cargo  = {version = "*"}
macroquad-particles = {version = "0.2.0",optional=true}
macroquad-profiler = {version = "0.2.0",optional=true}
macroquad = { version = "0.4.2",optional=true}
# Logging  libraries
env_logger = {version = "*"}
log = {version = "*", features = ["max_level_debug"]}
# protobuf library
prost = "0.10.3"
# command line parser
clap = { version = "3.0.10", features = ["derive"] }
csv = "1.1.6"
# To control physics simulation time frame
ticktock = "0.8.0" 
serde = "1.0.135"
message-io = {version = "0.14.5",default-features = false, features = ["tcp", "udp"]} 
bincode = "*"
ctrlc = "3.2.1"
human-panic = "1.0.3"
confy = "0.4.0"
bevy = {version = "0.11.2",optional=true}

[dependencies.nalgebra]
version = "*"
features =["serde-serialize"]

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
float_eq = "1"

[features]
macroquad = ["dep:macroquad-particles","dep:macroquad-profiler","dep:macroquad","nalgebra/convert-glam021"]
bevy = ["dep:bevy","nalgebra/convert-glam024"]
default = ["bevy"]

