[package]
name = "ktanks_server"
version = "1.0.2"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ui_client"

[[bin]]
name = "ktanks_server"

[build-dependencies]
prost-build = "0.9"
fs_extra = "1.3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version="0.18", features = [ "simd-stable","serde-serialize"] }
# Logging  libraries
env_logger = {version = "*"}
log = {version = "*", features = ["max_level_debug"]}
# protobuf library
prost = "0.10.3"
# command line parser
clap = { version = "4.0.0", features = ["derive"] }
csv = "1.1.6"
# To control physics simulation time frame
ticktock = "0.8.0" 
serde = "1.0.135"
message-io = {version = "0.14.5",default-features = false, features = ["tcp", "udp"]} 
bincode = "*"
ctrlc = "3.2.1"
human-panic = "1.0.3"
confy = "0.4.0"
bevy = {version = "0.11.2"}
bevy_egui = {version="0.21.0"}
bevy_embedded_assets = {version = "0.8.0"}

[dependencies.nalgebra]
version = "*"
features =["serde-serialize","convert-glam024"]

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
float_eq = "1"





