[tool.poetry]
name = "ktanks"
version = "0.1.0"
description = "Interface to ktanks server"
authors = ["pellico <pellico@users.noreply.github.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = ">=3.8"
protobuf = "^3.19.1"


[tool.poetry.dev-dependencies]
mypy = "^0.910"
Sphinx = "^4.3.1"
sphinx-autodoc-typehints = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
