[tool.poetry]
name = "ktanks"
version = "1.0.1"
description = "Interface to ktanks server"
authors = ["pellico <pellico@users.noreply.github.com>"]
license = "GPL 3.0"
include = ["ktanks/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
protobuf = "^3.19.1"


[tool.poetry.dev-dependencies]
mypy = "^0.930"
Sphinx = "^4.3.1"
sphinx-autodoc-typehints = "^1.12.0"
pylint = "^2.12.2"
pylint-protobuf = "^0.20.2"
mypy-protobuf = "^3.1.0"
beautifulsoup4 = "^4.10.0"
rinohtype = "^0.5.3"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
